# icoutils

./: .gitignore  CMakeLists.txt  config.h
common/: CMakeLists.txt  string-utils.c
icotool/: main.c
lib/: CMakeLists.txt  byteswap.h  error.c  getopt.c  gettext.h
